--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
         </div>
     </section>
 
-
+    <footer>
+        Đây là footer của Võ Hoàng Thành
+    </footer>
 
 
     <!-- Optional JavaScript -->
